Fix some compiler errors

--- a/modules/skshaper/BUILD.gn
+++ b/modules/skshaper/BUILD.gn
@@ -9,7 +9,9 @@ declare_args() {
 
 config("public_config") {
   if (skia_enable_skshaper) {
-    include_dirs = [ "include" ]
+    include_dirs = [ "include",
+       "../../third_party/icu",
+     ]
   }
 }
 
