--- a/modules/skshaper/BUILD.gn
+++ b/modules/skshaper/BUILD.gn
@@ -12,6 +12,7 @@ config("public_config") {
     include_dirs = [ "include",
        "../../third_party/icu",
        "../../third_party/externals/harfbuzz/src",
+       "../../third_party/externals/icu/source/common",
        "../../src/utils",
        "../../src/core",
        "../../include/private",
