--- a/gn/tests.gni
+++ b/gn/tests.gni
@@ -154,6 +154,8 @@ tests_sources = [
   "$_tests/PaintBreakTextTest.cpp",
   "$_tests/PaintImageFilterTest.cpp",
   "$_tests/PaintTest.cpp",
+  "$_tests/Paragraph.cpp",
+  "$_tests/ParagraphBuilder.cpp",
   "$_tests/ParametricStageTest.cpp",
   "$_tests/ParsePathTest.cpp",
   "$_tests/PathCoverageTest.cpp",
