--- a/modules/skparagraph/skparagraph.gni
+++ b/modules/skparagraph/skparagraph.gni
@@ -15,6 +15,7 @@ skparagraph_public = [
             "$_include/SkTextShadow.h",
             "$_include/SkTextStyle.h",
             "$_include/SkDartTypes.h",
+            "$_include/SkShaped.h",
          ]
 
 skparagraph_sources = [
@@ -24,4 +25,5 @@ skparagraph_sources = [
             "$_src/SkParagraphStyle.cpp",
             "$_src/SkTextShadow.cpp",
             "$_src/SkTextStyle.cpp",
+            "$_src/SkShaped.cpp",
           ]
