Renamed fields to be f*
Change-Id: I3377363f23b9e84c490f49593f3949aaa13a306b

--- a/modules/skparagraph/BUILD.gn
+++ b/modules/skparagraph/BUILD.gn
@@ -9,7 +9,7 @@ declare_args() {
 
 config("public_config") {
   if (skia_enable_skparagraph) {
-    include_dirs = [ "include" ]
+    include_dirs = [ "include", "include/flutter" ]
   }
 }
 
