More code style changes
Change-Id: I86651ffe65a6f52b1121466cfb95081d046f3c67

--- a/modules/skparagraph/skparagraph.gni
+++ b/modules/skparagraph/skparagraph.gni
@@ -25,9 +25,9 @@ skparagraph_sources = [
             "$_src/flutter/SkFontCollection.cpp",
             "$_src/flutter/SkParagraph.cpp",
             "$_src/flutter/SkParagraphBuilder.cpp",
-            "$_src/flutter/SkParagraphStyle.cpp",
             "$_src/flutter/SkTextShadow.cpp",
-            "$_src/flutter/SkTextStyle.cpp",
+            "$_src/SkParagraphStyle.cpp",
+            "$_src/SkTextStyle.cpp",
             "$_src/SkShapedParagraph.cpp",
             "$_src/SkShapedRun.cpp",
           ]
