--- a/modules/skparagraph/BUILD.gn
+++ b/modules/skparagraph/BUILD.gn
@@ -9,7 +9,10 @@ declare_args() {
 
 config("public_config") {
   if (skia_enable_skparagraph) {
-    include_dirs = [ "include", "include/flutter" ]
+    include_dirs = [ "include",
+              "include/flutter",
+              "src",
+              "../../include/private" ]
   }
 }
 
