--- a/modules/skparagraph/BUILD.gn
+++ b/modules/skparagraph/BUILD.gn
@@ -7,6 +7,8 @@ declare_args() {
   skia_enable_skparagraph = true
 }
 
+import("../../gn/skia.gni")
+
 config("public_config") {
   if (skia_enable_skparagraph) {
     include_dirs = [ "include",
