--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1733,6 +1733,7 @@ if (skia_enable_tools) {
         ":xml",
         "modules/sksg",
         "modules/skshaper",
+        "modules/skparagraph",
       ]
 
       # NIMA does not build on Windows clang
@@ -1844,6 +1845,7 @@ if (skia_enable_tools) {
     deps = [
       ":skia",
       "modules/skshaper",
+      "modules/skparagraph",
     ]
   }
 
@@ -2293,6 +2295,7 @@ if (skia_enable_tools) {
         ":tool_utils",
         "modules/skottie",
         "modules/skshaper",
+        "modules/skparagraph",
       ]
     }
   }
